# walledai-python

./: .gitignore  .stats.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  api.md  mypy.ini  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  publish-pypi.yml  release-doctor.yml
scripts/: lint
src/walled_ai/: __init__.py  _client.py  _exceptions.py  _resource.py  _response.py  _types.py  _version.py
src/walled_ai/_utils/: _logs.py
src/walledai/: __init__.py  _base_client.py  _client.py  _exceptions.py  _resource.py  _response.py  _streaming.py  _types.py  _version.py  walledprotect.py
src/walledai.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/walledai/_utils/: _logs.py
src/walledai/custom_types/: guardrail.py
src/walledai/resources/: __init__.py  moderation.py  root.py
src/walledai/types/: __init__.py  moderation_create_params.py
tests/: conftest.py  test_client.py  test_deepcopy.py  test_extract_files.py  test_files.py  test_models.py  test_qs.py  test_required_args.py  test_response.py  test_streaming.py  test_transform.py  utils.py
tests/api_resources/: test_moderation.py  test_root.py
tests/test_utils/: test_proxy.py  test_typing.py
